...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_value_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/add_edit_empty"
                        android:textColor="?colorOnBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_serial_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/add_edit_empty"
                        android:textColor="?colorOnBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/text_model_disp"
                        app:layout_constraintTop_toBottomOf="@+id/text_model_disp" />

                    <TextView
                        android:id="@+id/text_serial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/text_serial_disp"
                        app:layout_constraintStart_toStartOf="@+id/text_serial_disp" />

                    <TextView
                        android:id="@+id/text_make_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/add_edit_empty"
                        android:textColor="?colorOnBackground"
                        android:textSize="18sp"
...
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/text_description_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_empty"
                        android:textColor="?colorOnBackground"
                        android:textSize="18sp"
                        android:maxLines="100"
...
                        android:textStyle="bold"
                        android:maxLines="100"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_comment_disp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_edit_empty"
                        android:textColor="?colorOnBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
...
