...
                android:layout_marginEnd="16dp"
                android:backgroundTint="?colorPrimary"
                android:text="@string/list_search"
                android:textColor="?colorOnPrimary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/sortButton"
                app:layout_constraintEnd_toStartOf="@+id/optionButton"
                app:layout_constraintStart_toEndOf="@+id/sortButton"
                app:layout_constraintTop_toTopOf="@+id/sortButton" />

            <Button
                android:id="@+id/optionButton"
                android:layout_width="wrap_content"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/summaryTextView"
...
